--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -8,9 +8,9 @@ body {
 }
 
 .nav {
-  height: 50px;
+  height: 100px;
   width: 100%;
-  background-color: #4d4d4d;
+  background-color: #000;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -22,7 +22,7 @@ body {
 
 .nav > .nav-header > .nav-title {
   display: inline-block;
-  font-size: 22px;
+  font-size: 50px;
   color: #fff;
   padding: 10px 10px 10px 10px;
 }
@@ -97,4 +97,12 @@ body {
     height: calc(100vh - 50px);
     overflow-y: auto;
   }
+}
+.logo{
+  height: 75px;
+  width: 75px;
+   margin-top: 1px; 
+}
+.nav> .nav-links> a> .replies{
+  font-size: 50px;
 }
