--- a/frontend/src/pages/Details/details.css
+++ b/frontend/src/pages/Details/details.css
@@ -2,14 +2,14 @@
     text-align: center;
     padding-top: 20px;
 }
-.container{
+/* .container{
     background-color: black;
     color: white;
-}
+} */
 .bs, .re, .cp, .mv{
     padding-left: 5px;
 }
-
+/* 
 .whole{
    background-image: url(../../Images/heart.png);
    background-size:cover;
@@ -17,4 +17,4 @@
 }
 .footer{
     background-color: black;
-}
+} */
