--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -5,4 +5,10 @@ min-height: 100vh;
 }
 .details{
     color: #fff;
+    padding-top: 50px;
+}
+
+.dtl{
+    color: white;
+    text-decoration: none;
 }
