--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -14,6 +14,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .nav > .nav-header {
