--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -12,3 +12,21 @@ min-height: 100vh;
     color: white;
     text-decoration: none;
 }
+.col-6{
+    font-size: 20px;
+}
+/* .col-3 {
+    font-size: 30px; 
+}
+.col-4{
+    font-size: 30px;
+    max-height: 182px;
+} */
+.hodiv{
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
+    align-items: end;
+    width: 250px;
+    margin-top: 0%;
+}
