--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -7,18 +7,12 @@
   font-family: 'Poppins', sans-serif;
 }
 
-body {
-  display: flex;
-  display: flex-end;
-  align-items: flex-end;
-  min-height: 100vh;
-  background: #333;
-}
+
 
 footer {
   position: relative;
   width: 100%;
-  background: red;
+  background: black;
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
@@ -40,7 +34,7 @@ footer .social_icon li, footer .menu li {
 }
 footer .social_icon li a {
   font-size: 2em;
-  color: #ccc;
+  color: red;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
@@ -52,7 +46,7 @@ footer .social_icon li a:hover {
 
 footer .menu li a {
   font-size: 1.2em;
-  color: #ccc;
+  color: red;
   margin: 0 10px;
   display: inline-block;
   transition: 0.5s;
@@ -78,7 +72,7 @@ footer .wave {
   left: 0;
   width: 100%;
   height: 100px;
-  background: url(https://i.ibb.co/rZt4Nhg/wave.png);
+  background: url(https://gifimage.net/wp-content/uploads/2017/11/ecg-gif-12.gif);
   background-size: 1000px 100px;
 }
 
