--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,32 +1,19 @@
 .content{
     background-image: url(../../Images/heart.png);
     background-size: cover;
-min-height: 100vh;
+    min-height: 90vh;
 }
 .details{
     color: #fff;
     padding-top: 50px;
+    font-weight: bold;
+    font-size: 20px;
 }
-
 .dtl{
     color: white;
     text-decoration: none;
 }
-.col-6{
-    font-size: 20px;
-}
-/* .col-3 {
-    font-size: 30px; 
-}
-.col-4{
-    font-size: 30px;
-    max-height: 182px;
-} */
 .hodiv{
-    display: flex;
-    flex-direction: column;
+    
     font-size: 30px;
-    align-items: end;
-    width: 250px;
-    margin-top: 0%;
 }
